--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/header": "^2.6.2",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
+    "@popperjs/core": "^2.11.1",
+    "@tailwindcss/forms": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,9 +16,24 @@
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-table": "^7.0.5",
+    "date-fns": "^2.28.0",
+    "faker": "^6.6.6",
+    "lodash": "^4.17.21",
+    "match-sorter": "^6.3.1",
+    "mobx": "^6.3.10",
+    "mobx-react": "^7.2.1",
+    "mobx-react-lite": "^3.2.3",
+    "mobx-state-tree": "^5.1.0",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
+    "react-popper": "^2.2.5",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
+    "throttle-debounce": "^3.0.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
   },
@@ -39,5 +60,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.178",
+    "@types/react-color": "^3.0.6",
+    "@types/throttle-debounce": "^2.1.0",
+    "autoprefixer": "^10.4.1",
+    "mst-middlewares": "^5.1.0",
+    "postcss": "^8.4.5",
+    "remotedev": "^0.2.9",
+    "tailwindcss": "^3.0.8"
   }
 }
