--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-table": "^7.0.5",
     "date-fns": "^2.28.0",
     "faker": "^6.6.6",
+    "gantt-task-react": "^0.3.7",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "mobx": "^6.3.10",
