--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/lodash": "^4.14.178",
     "@types/react-color": "^3.0.6",
     "@types/throttle-debounce": "^2.1.0",
+    "@welldone-software/why-did-you-render": "^6.2.3",
     "autoprefixer": "^10.4.1",
     "mst-middlewares": "^5.1.0",
     "postcss": "^8.4.5",
