start of 29 jan

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/react": "^2.0.0-beta.106",
+    "@tiptap/starter-kit": "^2.0.0-beta.174",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.17",
     "@types/react": "^17.0.38",
@@ -26,6 +28,7 @@
     "mobx-react": "^7.2.1",
     "mobx-react-lite": "^3.2.3",
     "mobx-state-tree": "^5.1.0",
+    "prosemirror-tables": "^1.1.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
@@ -34,6 +37,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "rich-markdown-editor": "^11.21.3",
+    "styled-components": "^5.3.3",
     "throttle-debounce": "^3.0.1",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.2"
