--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.28.0",
     "faker": "^6.6.6",
     "gantt-task-react": "^0.3.7",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.1",
     "mobx": "^6.3.10",
@@ -31,6 +32,8 @@
     "prosemirror-tables": "^1.1.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-popper": "^2.2.5",
