--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dnd-html5-backend": "^14.1.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
+    "react-motion": "^0.5.2",
     "react-popper": "^2.2.5",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
@@ -44,6 +45,7 @@
     "styled-components": "^5.3.3",
     "throttle-debounce": "^3.0.1",
     "typescript": "^4.5.4",
+    "usehooks-ts": "^2.3.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -73,6 +75,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/react-color": "^3.0.6",
+    "@types/react-motion": "^0.0.32",
     "@types/throttle-debounce": "^2.1.0",
     "@welldone-software/why-did-you-render": "^6.2.3",
     "autoprefixer": "^10.4.1",
